# DiscordAiService

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.MD  docker-compose.yml  main.py  pyproject.toml  test_agent_contract.py  test_logging.py  test_recommendations.py  test_search_client.py  test_voice.py  wyoming_test.py  wyoming_tests.py
app/: logging_setup.py
app/api/: __init__.py  agent.py  playback.py  tts.py  user_prompt.py
app/data/db/schemas/: request.py  user.py
app/data/models/: __init__.py  agent.py  ai_response_models.py  playback.py  prompt.py  track.py
app/recommendations/: __init__.py  cooldown.py  freshness.py  genres.py  history.py  sampling.py  settings.py
app/services/: __init__.py  agent_service.py  memory.py  prompt_service.py  search_client.py  tts_service.py
app/storage/: __init__.py  postgres.py  redis_client.py
migrations/: env.py
migrations/versions/: 08f3619b4aba_initial_agent_sessions.py  4215b315a818_add_playback_confirmation_fields.py  71a4a909b424_add_play_events_listening_history.py  b6c524152658_add_artist_tags_cache.py  e4a3d0a9529d_add_recent_tracks_to_agent_sessions.py
