[project]
name = "discordaiservice"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "numpy>=2.4.6",
    "pydantic-ai>=1.103.0",
    "python-dotenv>=1.2.2",
    "redis>=5.2.1",
    "ruff>=0.15.14",
    "sounddevice>=0.5.5",
    "uvicorn>=0.48.0",
    "wyoming>=1.9.0",
]
